// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E: add-jsdoc-to-wasm outputs a AssemblyScript file 1`] = `
"/**
 * Add two numbers
 * @param {number} a
 * @param {number} b
 * @returns {number}
 */
export function add(a: f64, b: f64): f64 {
  return a + b;
}
"
`;

exports[`E2E: add-jsdoc-to-wasm outputs a TypeScript file 1`] = `
"/**
 * Add two numbers
 * @param {number} a
 * @param {number} b
 * @returns {number}
 */
export function add(a: number, b: number): number {
  return a + b;
}
"
`;

exports[`E2E: add-jsdoc-to-wasm outputs a Wat file 1`] = `
"(module
 (type $FUNCSIG$ddd (func (param f64 f64) (result f64)))
 (type $FUNCSIG$v (func))
 (memory $0 0)
 (table $0 1 funcref)
 (elem (i32.const 0) $null)
 (global $~lib/memory/HEAP_BASE i32 (i32.const 8))
 (export \\"memory\\" (memory $0))
 (export \\"table\\" (table $0))
 (export \\"add\\" (func $add/add))
 (func $add/add (; 0 ;) (type $FUNCSIG$ddd) (param $0 f64) (param $1 f64) (result f64)
  local.get $0
  local.get $1
  f64.add
 )
 (func $null (; 1 ;) (type $FUNCSIG$v)
 )
)
"
`;
